--- a/views/partials/head.mustache
+++ b/views/partials/head.mustache
@@ -14,4 +14,6 @@
     <form class="top-form" action="/go" method="get">
       <input class="text-input" title="URL" type="url" name="url" value="{{ url }}">
       <input type="submit" value="Go!">
+      <input type="checkbox" name="raw" value="1">
+      <label for="raw">Raw</label>
     </form>
